--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #FAFBFF;
+    display: flex;
+    gap: 4.375rem;
 }
 
 aside {
@@ -43,7 +45,7 @@ aside {
     gap: 0.875rem;
     align-items: center;
     padding: 0.8125rem;
-    border-radius: 0.5rem;
+    border-radius: 8px;
     transition: background-color 0.3s ease-in-out;
 }
 
@@ -97,4 +99,146 @@ aside {
 .profile__position {
     font-size: 0.75rem;
     color: #757575;
+}
+
+.main {
+    padding: 3.0625rem 0 0 0;
+    display: flex;
+    flex-direction: column;
+    gap: 3.125rem;
+}
+
+.main__header {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.customers {
+    padding: 1.875rem 2.375rem;
+    background-color: #ffff;
+    border-radius: 30px;
+}
+
+.customers__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0 3.125rem 0;
+}
+
+.customers__search {
+    background-color: #F9FBFF;
+    border: none;
+    padding: 0.625rem;
+    border-radius: 10px;
+}
+
+.customers__wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.customers__wrapper i {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #ccc;
+    pointer-events: none;
+}
+
+.customers__search::placeholder {
+    font-size: 0.75rem;
+    color: #B5B7C0;
+    padding: 1.5rem;
+}
+
+.customers__title {
+    font-size: 1.375rem;
+    font-weight: 600;
+    line-height: 2rem;
+}
+
+.customers__subtitle {
+    font-size: 0.875rem;
+    color: #16C098;
+}
+
+thead .customers__td {
+    font-size: 0.875rem;
+    color: #B5B7C0;
+    text-align: left;
+    font-weight: 400;
+    padding: 0 0 0.875rem 0;
+    border-bottom: 1px solid #EEEEEE;
+}
+
+.customers__td:not(:last-child) {
+    padding-right: 3.625rem;
+}
+
+tbody .customers__td {
+    padding: 1.5rem 0;
+    border-bottom: 1px solid #EEEEEE;
+}
+
+table {
+    padding: 0;
+}
+
+.customers__status {
+    padding: 0.25rem 1.125rem;
+    border-radius: 4px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.customers__status--active {
+    border: 2px solid #00B087;
+    color: #008767;
+    background-color: rgba(22, 192, 158, 0.38);
+}
+
+.customers__status--inactive {
+    border: 2px solid #DF0404;
+    color: #DF0404;
+    background-color: rgba(255, 197, 197, 1);
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    padding: 2rem 0 0 0;
+    justify-content: space-between;
+}
+
+.pagination__buttons {
+    display: flex;
+    gap: 0.75rem;
+    align-items: flex-end;
+}
+
+.pagination__button {
+    background-color: #F5F5F5;
+    padding: 0.175rem 0.5625rem;
+    border-radius: 4px;
+    font-size: 0.75rem;
+    font-weight: 500;;
+    border: 1px solid #EEEEEE;
+}
+
+.pagination__button:hover {
+    cursor: pointer;
+}
+
+.pagination__button--active {
+    color: #ffff;
+    background-color: #5932EA;
+    border: 1px solid #5932EA;
+}
+
+.pagination__text {
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: #B5B7C0;
 }
