--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ aside {
     border-radius: 8px;
     transition: background-color 0.3s ease-in-out;
     -webkit-transition: background-color 0.3s ease-in-out;
+    -moz-transition: background-color 0.3s ease-in-out;
 }
 
 .navigation__item:not(.navigation__item--active):hover {
@@ -350,18 +351,28 @@ table {
         color: #333;
         width: 100%;
         text-align: left;
+        border-bottom: none;
     }
 
     .customers__td::before {
         content: attr(data-label);
-        font-weight: bold;
-        display: inline-block;
+        font-weight: 500;
+        display: block;
+        color: #b5b7c0;
         margin-bottom: 0.5rem;
+    }
+
+    .customers__td:not(:last-child) {
+        border-bottom: none;
     }
 
     .pagination {
         flex-direction: column;
-        gap: 1rem;
+        gap: 0.8rem;
         align-items: flex-start;
+    }
+
+    .pagination__buttons {
+        gap: 0.35rem;
     }
 }
